Fri Jan 26 23:55:56 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: bug fix of WIN32OLE_VARIANT when variant
	  type is VT_BYREF|VT_VARIANT.
	
	* test/win32ole/test_win32ole_variant_with_ie.rb: ditto.

Fri Jan 26 12:03:39 2007  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb (TkConfigMethod#__confinfo_cmd,
	  __conv_keyonly_optkeys): make them private [ruby-dev:30074].

	* ext/tk/lib/tk/txtwin_abst.rb: fix typo [ruby-dev:30073].

	* ext/tk/lib/tk/canvas.rb (TkCanvas#scan_dragto): lack of an argument.

	* ext/tk/lib/tk/canvas.rb: clarify the including module name
	  [ruby-dev:30080].

	* ext/tk/lib/tk/scrollable.rb: change primary name of modules
	  [ruby-dev:30080].

Fri Jan 26 07:48:57 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_init_copy): need to copy internal
	  structure on clone and dup.  [ruby-dev:30192]

Wed Jan 24 20:34:51 2007  Kouhei Sutou  <kou@cozmixng.org>

	* test/ruby/test_iterator.rb: removed a needless workaround.

Wed Jan 24 18:05:39 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): fix
	  regexp font-lock bug.  [ruby-talk:235758]

Tue Jan 23 18:26:12 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension::read_multipart): use == instead
	  of ===.  [ruby-dev:30176]

Tue Jan 23 15:39:25 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* Makefile.in, common.mk, configure.in, */{Makefile.sub, configure.bat,
	  setup.mak}: add --with-baseruby configure option.

Mon Jan 22 14:57:25 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c: fix errors in socket sample code.
	  [ruby-core:09992]

Sat Jan 20 21:05:18 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_s_set_code_page): WIN32OLE.codepage= 
	  accepts installed codepage.

	* test/win32ole/test_win32ole.rb (test_s_codepage_changed): ditto.
